# airfield-wx

./: .gitignore  CLAUDE.md  Makefile  README.md  branding.toml.example  install.sh  vercel.json
dashboard/: app.js  index.html  style.css
demo/: README.md  build.py  demo.css  demo.js  generate_snapshots.py
docs/: CLAUDE.md  future-work.md
server/: pyproject.toml  weather.toml.example
server/fixtures/: wind.json
server/fixtures/wire_samples/: README.md  outdoor_wind_happy.json  outdoor_wind_nan.json  wind_station_happy.json  wind_station_nan.json
server/tests/: conftest.py  test_config.py  test_db.py  test_derivations_airport.py  test_derivations_fused.py  test_derivations_readings.py  test_derivations_runway.py  test_endpoints.py  test_external_endpoint.py  test_external_metar.py  test_external_providers.py  test_gaps.py  test_geo.py  test_integration_real_polling.py  test_logger_task.py  test_logging.py  test_responses_airport.py  test_schemas.py  test_sensors.py  test_wind_path.py  test_wind_resolver.py  test_wind_topology.py  test_wire_format.py
server/tests/fixtures/: metar_bbox_seattle.json  metar_ksea.json
server/weather_server/: __init__.py  _payload_keys.py  branding.py  config.py  db.py  geo.py  logger_task.py  main.py  outdoor_source.py  responses.py  schemas.py  sensors.py  wire_format.py
server/weather_server/derivations/: airport.py  fused.py  readings.py  runway.py  wind.py
server/weather_server/routes/: airport.py  astronomy.py  current.py  external.py  history.py  summary.py
sketches/: basement.ino  indoor.ino  outdoor.ino  (+1 more)
(+22 files in other folders)
